# EverythingApp

./: CMakeLists.txt  CMakePresets.json  main.cpp
inc/: Tools.hpp  common.hpp  net_tools.hpp
src/: net_tools.cpp
